# web-archiver

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  web_archive_analyzer.py  web_archive_zipper.py
.github/workflows/: ci.yml
web_archiver/: README.md  __init__.py  protocols.py
web_archiver/core/: __init__.py  archiver.py  crc_calculator.py  pattern_matcher.py  scanner.py  verifier.py
web_archiver/domain/: __init__.py  models.py
