[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"

[project]
name = "web-archiver"
version = "1.0.0"
description = "Intelligent tool for archiving saved web pages with comprehensive verification"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["web", "archive", "7zip", "verification", "html", "browser"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Archiving",
    "Topic :: Utilities",
]
dependencies = [
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
web-archive-analyzer = "web_archive_analyzer:main"
web-archive-zipper = "web_archive_zipper:main"

[project.urls]
Homepage = "https://github.com/yourusername/web-archiver"
Documentation = "https://github.com/yourusername/web-archiver#readme"
Repository = "https://github.com/yourusername/web-archiver"
Issues = "https://github.com/yourusername/web-archiver/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["web_archiver*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.black]
line-length = 100
target-version = ['py311']

[tool.coverage.run]
source = ["web_archiver"]
omit = ["*/tests/*"]
